    - ChangeLog will only invoked before make pack_src or make changelog.
  + find_lang and files -f .lang are added automatically when
    translations exists.
  + New modules:
    - CmakeFedoraScript: Scripts to be invoked in command line.
    - ManageChangeLogScript: Scripts for handling ChangeLog.
    - ManageRpmScript: RPM Scripts for handling RPM and SPEC.
  + New cache variables:
    - CMAKE_FEDORA_MODULE_DIR: cmake-fedora modules dir.
  + ManageFile: New function: MANAGE_CMAKE_FEDORA_CONF
  + ManageFile: New function: MANAGE_FILE_CACHE
  + ManageFile: New function: MANAGE_FILE_EXPIRY
  + ManageGConf: New macro: MANAGE_GCONF_SCHEMAS
  + ManageMessage: New function: M_OUT
  + ManageVariable: New macro: CMAKE_FEDORA_CONF_GET_ALL_VARIABLES
  + ManageString: New function: STRING_ESCAPE_BACKSLASH
  + ManageString: New function: STRING_ESCAPE_DOLLAR
  + ManageString: New function: STRING_ESCAPE_QUOTE
  + Target rpmlint: rpmlint statistics are now combined.
  + cmake-fedora-fedpkg: Default is now build all active 
    Fedora (including rawhide) and EPEL releases in fedpkg branches.

- Removed:
  + cmake-fedora.conf.in is no longer needed.
  + TODO should be put in wiki.  
  + Modules:
    - ManageInstall: This is no longer needed.
  + Targets:
    - changelog_prev_update: 
  + Scripts:
    - cmake-fedora-functions is no longer needed.
    - cmake-fedora-changelog is no longer needed.
  + Variables:
    - PRJ_RPM_SPEC_FILE

- Changed:
  + DateTimeFormat: Macro to function: TODAY
  + ManageAPIDOC: MANAGE_APIDOC_DOXYGEN: Macro to function.
  + ManageAPIDOC: MANAGE_APIDOC_DOXYGEN: Parameter changed.
  + ManageFile: GIT_GLOB_TO_CMAKE_REGEX: Macro to function.
  + ManageString: STRING_ESCAPE_SEMICOLON: Macro to function.
  + ManageDependency: MANAGE_DEPENDENCY: Macro to function.
  + ManageRelease: MANAGE_RELEASE: Macro to function.
  + ManageRelease: MANAGE_RELEASE: Parameter changed.
  + PRJ_DOC_DIR: Changed from docdir/<PRJ_NAME>-<PRJ_VER> 
    to docdir/<PRJ_NAME>
